--- a/src/main/resources/templates/content-permission-list.html
+++ b/src/main/resources/templates/content-permission-list.html
@@ -82,38 +82,38 @@
         <section class="content"> <!-- .box-body -->
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">权限列表</h3>
+                    <!--<h3 class="box-title">权限列表</h3>-->
+                    <!--工具栏-->
+                    <div class="pull-left">
+                        <div class="form-group form-inline">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default" title="新建"
+                                        onclick='location.href="/permission/add"'>
+                                    <i class="fa fa-file-o"></i> 新建
+                                </button>
+                                <button type="button" class="btn btn-default" title="删除"
+                                        onclick="doDelete()">
+                                    <i class="fa fa-trash-o"></i> 删除
+                                </button>
+                                <button type="button" class="btn btn-default" title="刷新"
+                                        onclick="window.location.reload();">
+                                    <i class="fa fa-refresh"></i> 刷新
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <!--<div class="box-tools pull-right">-->
+                    <!--<div class="has-feedback">-->
+                    <!--<input type="text" class="form-control input-sm"-->
+                    <!--placeholder="搜索"> <span-->
+                    <!--class="glyphicon glyphicon-search form-control-feedback"></span>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--工具栏/-->
                 </div>
                 <div class="box-body">
                     <!-- 数据表格 -->
                     <div class="table-box">
-                        <!--工具栏-->
-                        <div class="pull-left">
-                            <div class="form-group form-inline">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-default" title="新建"
-                                            onclick='location.href="/permission/add"'>
-                                        <i class="fa fa-file-o"></i> 新建
-                                    </button>
-                                    <button type="button" class="btn btn-default" title="删除"
-                                            onclick="doDelete()">
-                                        <i class="fa fa-trash-o"></i> 删除
-                                    </button>
-                                    <button type="button" class="btn btn-default" title="刷新"
-                                            onclick="window.location.reload();">
-                                        <i class="fa fa-refresh"></i> 刷新
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <!--<div class="box-tools pull-right">-->
-                            <!--<div class="has-feedback">-->
-                                <!--<input type="text" class="form-control input-sm"-->
-                                       <!--placeholder="搜索"> <span-->
-                                    <!--class="glyphicon glyphicon-search form-control-feedback"></span>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                        <!--工具栏/-->
                         <!--数据列表-->
                         <table id="dataList"
                                class="table table-bordered table-striped table-hover dataTable">
