--- a/src/main/resources/templates/content-syslog-list.html
+++ b/src/main/resources/templates/content-syslog-list.html
@@ -83,6 +83,8 @@
         <section class="content"> <!-- .box-body -->
             <div class="box box-primary">
                 <div class="box-header with-border">
+                    <!--工具栏-->
+                    <!--<h3 class="box-title">日志列表</h3>-->
                     <div class="pull-left">
                         <div class="form-group form-inline">
                             <div class="btn-group">
@@ -97,6 +99,14 @@
                             </div>
                         </div>
                     </div>
+                    <!--<div class="box-tools pull-right">-->
+                    <!--<div class="has-feedback">-->
+                    <!--<input type="text" class="form-control input-sm"-->
+                    <!--placeholder="搜索"> <span-->
+                    <!--class="glyphicon glyphicon-search form-control-feedback"></span>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--工具栏-->
                 </div>
                 <div class="box-body">
                     <!-- 数据表格 -->
