--- a/src/main/resources/templates/content-role-edit.html
+++ b/src/main/resources/templates/content-role-edit.html
@@ -80,8 +80,7 @@
             </ol>
         </section>
         <!-- 内容头部 /-->
-        <form action="/role/save"
-              method="post">
+        <form action="/role/save" method="post">
             <!-- 正文区域 -->
             <section class="content"> <!--产品信息-->
                 <div class="panel panel-default">
