--- a/src/main/resources/templates/content-product-detail.html
+++ b/src/main/resources/templates/content-product-detail.html
@@ -54,7 +54,7 @@
     <link rel="stylesheet"
           href="/plugins/bootstrap-slider/slider.css">
 </head>
-<body class="hold-transition skin-purple sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <!-- 页面头部 -->
     <div th:replace="header.html"></div>
