--- a/src/main/resources/templates/content-users-role-add.html
+++ b/src/main/resources/templates/content-users-role-add.html
@@ -56,7 +56,7 @@
     <link rel="stylesheet"
           href="/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.css">
 </head>
-<body class="hold-transition skin-purple sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
     <!-- 页面头部 -->
     <div th:replace="header.html"></div>
